--- a/alumnos/CristianCasa/FRONTEND/JavaS2608/estilos.css
+++ b/alumnos/CristianCasa/FRONTEND/JavaS2608/estilos.css
@@ -48,7 +48,7 @@
 }
 
 .miBotonLimpiar {
-    background-color: #503c3e;
+    background-color: #d60f23;
     color: white;
     border: none;
     border-radius: 4px;
